[gd_scene load_steps=14 format=3 uid="uid://bjj0jadbuu4lh"]

[ext_resource type="Script" path="res://resource/organs/continuous_organ/light_altar_organ.gd" id="1_34ug8"]
[ext_resource type="Texture2D" uid="uid://dir4xaqhgm1ng" path="res://assets/tile/陷阱.png" id="2_lsprl"]
[ext_resource type="Shader" path="res://shaders/hight_light.gdshader" id="3_d085p"]
[ext_resource type="Script" path="res://scripts/tool/deer_polygon.gd" id="3_kd26y"]

[sub_resource type="AtlasTexture" id="AtlasTexture_xnhws"]
atlas = ExtResource("2_lsprl")
region = Rect2(48, 48, 48, 48)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ivbyc"]
shader = ExtResource("3_d085p")
shader_parameter/shine_color = Color(1, 1, 1, 1)
shader_parameter/shine_progress = 0.0
shader_parameter/shine_size = 0.1
shader_parameter/shine_angle = 45.0
shader_parameter/is_up_and_down = true
shader_parameter/amplitude = 32.0
shader_parameter/speed = 0.75

[sub_resource type="Gradient" id="Gradient_e0eua"]
offsets = PackedFloat32Array(0, 0.693333)
colors = PackedColorArray(1, 1, 1, 0.784314, 0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_mtjej"]
gradient = SubResource("Gradient_e0eua")
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.5, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_4a47h"]
gradient = SubResource("Gradient_e0eua")
width = 512
height = 512
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.5, 0)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fsdtq"]
size = Vector2(48, 32)

[sub_resource type="CircleShape2D" id="CircleShape2D_htyr3"]
radius = 256.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lgt1v"]
bg_color = Color(0, 0, 0, 0.301961)
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="LabelSettings" id="LabelSettings_rlsc1"]
font_size = 24

[node name="LightAltarOrgan" type="CharacterBody2D"]
collision_layer = 48
script = ExtResource("1_34ug8")
organ_name = "光源祭坛"
organ_desc = "玩家进入发光区域后会快速的补充亮度"
organ_texture = SubResource("AtlasTexture_xnhws")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_lsprl")
region_enabled = true
region_rect = Rect2(48, 48, 48, 48)

[node name="Light" type="Polygon2D" parent="."]
material = SubResource("ShaderMaterial_ivbyc")
position = Vector2(0, -48)
texture = SubResource("GradientTexture2D_mtjej")
texture_offset = Vector2(32, 32)
polygon = PackedVector2Array(24, 0, 20.7846, 12, 12, 20.7846, 1.46953e-15, 24, -12, 20.7846, -20.7846, 12, -24, 2.93906e-15, -20.7846, -12, -12, -20.7846, -4.40858e-15, -24, 12, -20.7846, 20.7846, -12)
script = ExtResource("3_kd26y")
polygon_edge = 12
polygon_length = 24.0

[node name="PointLight2D" type="PointLight2D" parent="Light"]
color = Color(1, 1, 1, 0.458824)
energy = 2.0
shadow_enabled = true
texture = SubResource("GradientTexture2D_4a47h")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 8)
shape = SubResource("RectangleShape2D_fsdtq")

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(0, -48)
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_htyr3")

[node name="FTipPanelContainer" type="PanelContainer" parent="."]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(200, 64)
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -130.0
offset_right = 100.0
offset_bottom = -66.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_lgt1v")

[node name="Label" type="Label" parent="FTipPanelContainer"]
layout_mode = 2
text = "按下F进行存档"
label_settings = SubResource("LabelSettings_rlsc1")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
